--- a/src/main/resources/templates/myPage/preference.html
+++ b/src/main/resources/templates/myPage/preference.html
@@ -17,7 +17,7 @@
     <div th:replace="~{common/myPageSide-menu}"></div>
 
     <div class="mainContent">
-      
+
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="x-circle-fill" viewBox="0 0 16 16">
           <path
@@ -38,10 +38,10 @@
           <i class="fas fa-minus-circle me-2"></i>전체 해제
         </button>
       </div>
-  
-  
+
+
       <section class="content-box">
-  
+
         <div class="category-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
           <div class="row mb-3">
             <div class="col-12">
@@ -56,30 +56,32 @@
                   </div>
                 </div>
                 <div class="card-body gap-1 py-5">
-                  <p class="card-text">관심 있는 카테고리를 선택하세요.</p>
+                  <p class="card-text" >관심 있는 카테고리를 선택하세요.</p>
                 </div>
+
+                <div class="row">
+                  <div class="col-12">
+                    <div class="card">
+      
+                      <div class="card-body py-1 d-flex flex-wrap justify-content-center">
+                        <!-- 카테고리 버튼들 -->
+                        <button class="btn btn-light preference" th:each="category : ${categoryList}" style="border: 1px solid #333;">
+                          <label class="checkbox-label d-flex align-items-center">
+                            <input type="checkbox" name="categoryNo" class="category-checkbox"
+                              th:value="${category.categoryNo}" style="display: none;">
+                            <span class="checkbox-text" th:text="${category.categoryName}"></span>
+                          </label>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-12">
-              <div class="card">
-                
-                <div class="card-body py-1 d-flex flex-wrap justify-content-center">
-                  <!-- 카테고리 버튼들 -->
-                  <button class="btn btn-light preference" th:each="category : ${categoryList}">
-                    <label class="checkbox-label d-flex align-items-center">
-                      <input type="checkbox" name="categoryNo" class="category-checkbox" th:value="${category.categoryNo}"
-                        style="display: none;">
-                      <span class="checkbox-text" th:text="${category.categoryName}"></span>
-                    </label>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-  
+
         <!-- 취향 선택 영역 -->
         <div class="preference-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
           <div class="row mb-3">
@@ -97,27 +99,27 @@
                 <div class="card-body gap-2 py-5">
                   <p class="card-text">관심 있는 테마를 선택하세요.</p>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <div class="card">
-                
-                <div class="card-body py-1 d-flex flex-wrap justify-content-center">
-                  <!-- 취향 버튼들 -->
-                  <button class="btn btn-light preference" th:each="preference : ${preferenceList}">
-                    <label class="checkbox-label d-flex align-items-center">
-                      <input type="checkbox" name="preferenceNo" class="preference-checkbox"
-                        th:value="${preference.preferenceNo}" style="display: none;">
-                      <span class="checkbox-text" th:text="${preference.preferenceName}"></span>
-                    </label>
-                  </button>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="card">
+      
+                      <div class="card-body py-1 d-flex flex-wrap justify-content-center">
+                        <!-- 취향 버튼들 -->
+                        <button class="btn btn-light preference" th:each="preference : ${preferenceList}"  style="border: 1px solid #333;">
+                          <label class="checkbox-label d-flex align-items-center">
+                            <input type="checkbox" name="preferenceNo" class="preference-checkbox"
+                              th:value="${preference.preferenceNo}" style="display: none;">
+                            <span class="checkbox-text" th:text="${preference.preferenceName}"></span>
+                          </label>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
+              </div>
             </div>
           </div>
-        </div>
       </section>
     </div>
   </main>
