--- a/src/main/resources/templates/admin/adminSales.html
+++ b/src/main/resources/templates/admin/adminSales.html
@@ -7,6 +7,9 @@
 
   <link rel="stylesheet" href="/css/admin/adminSales.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.1"></script>
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -99,9 +102,9 @@
         <div class="sort-dropdown">
           <select id="sortSelect">
               <option value="sales">전체 매출</option>
-              <option value="category">카테고리</option>
               <option value="company">출판사</option>
-          </select>
+            </select>
+            <input type="text" class="text hidden">
         </div>
         <div class="btn-container">
           <button class="weeks">1주일</button>
@@ -114,9 +117,9 @@
         <div class="graph-box">
       
           <div class="sales"> 
-            <div>거래액 : 0원</div>
-            <div>순거래액 : 0원</div>
-            <div>거래취소액 : 0원</div>
+            <div>기간 내 판매금액 : 0원</div>
+            <div>기간 내 발주금액 : 0원</div>
+            <div>순수익 : 0원</div>
           </div>
       
           <div class="content-box">
@@ -130,7 +133,7 @@
     
               </div>
               <div class="graph-section">
-                <a href="#">그래프 그릴거예여</a>
+                <canvas id="myChart" width="5px" height="3px"></canvas>
               </div>
             </div>
       
@@ -141,7 +144,6 @@
                   <tr>
                     <th>책 번호</th>
                     <th>책이름</th>
-                    <th>카테고리</th>
                     <th>판매수량</th>
                     <th>수익</th>
                   </tr>
@@ -150,7 +152,6 @@
                   <tr>
                     <th>1️⃣</th>
                     <td>책이름</td>
-                    <td>카테고리</td>
                     <td>판매수량</td>
                     <td>수익</td>
                   </tr>
