--- a/src/main/resources/static/css/fragments/myPageSide-menu.css
+++ b/src/main/resources/static/css/fragments/myPageSide-menu.css
@@ -1,6 +1,6 @@
 .myPageSideBar {
   min-width: 300px;
-  height: 100vh;
+  height: 100%;
   background-color: white;
   border-radius: 10px;
   box-sizing: border-box;
